--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,1 @@
-screencapture-timestamp-service-lb-glitch-me-2020-04-08-20_24_13.pdf
+screencapture-timestamp-service-lb-glitch-me-2020-04-08-20_46_57.png
